2012-11-06 Borut Razem <borut.razem AT gmail.com>

	* support/sdbinutils/bfd/targets.c:
	  removed unneeded vectors and flavours

2012-11-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/sdbinutils/bfd/targets.c: reenable asxxxx

2012-11-05 Borut Razem <borut.razem AT gmail.com>

	* support/sdbinutils/*:
	  sdbinutils synced with binutils-2.23

2012-11-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-z80.def,
	  src/z80/peeph-r2k.def:
	  Fix condition on bc in peephole rule.

2012-11-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-20040313-1.c:
	  Disabled test, since it fails on 32-bit Linux.

2012-11-02 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/lib/pic16/startup/crt0i.c,
	  device/lib/pic16/startup/crt0iz.c: Was reduced size of the code.

2012-11-02 Molnar Karoly <molnarkaroly AT users.sf.net>

	* doc/sdccman.lyx: Added new pic18f97j94 family.

2012-11-02 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/cinc2h.pl,
	  support/scripts/pic14-header-parser.pl,
	  support/scripts/pic16-header-parser.pl: Toggle execution flag.

2012-11-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed bug in assignment from register pair iy to extended stack, fix #3582658.

2012-11-02 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/cinc2h.pl: Changed option "-c" onto "-o".
	* support/scripts/pic14-header-parser.pl,
	  support/scripts/pic16-header-parser.pl,
	  support/scripts/pic16fam-h-gen.pl: Updated my email address.

2012-11-02 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/include/pic16/pic16devices.txt,
	  device/include/pic16/pic18fregs.h,
	  device/lib/pic16/libio/Makefile.am,
	  device/lib/pic16/libio/Makefile.in,
	  device/lib/pic16/libio/adc.ignore,
	  device/lib/pic16/libio/i2c.ignore,
	  device/lib/pic16/libio/usart.ignore,